added prev and next buttons for slider and classes for anchors

--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
     <title>Дизайнерская мебель</title>
   </head>
 
-  <body>
+  <body class="page-body">
     <header class="page-header">
       <div class="page-header__logo">
         Логотип Callium
       </div>
-      <nav class="page-header__site-nav header__site-nav_closed">
-        <img class="page-header__site-favicon">
+      <nav class="page-header__site-nav page-header__site-nav_closed">
         <ul class="page-header__site-nav-list">
-          <li class="page-header__site-nav-item"><a href="#">Мебель</a></li>
-          <li class="page-header__site-nav-item"><a href="#">Освещение</a></li>
-          <li class="page-header__site-nav-item"><a href="#">Текстиль</a></li>
+          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Мебель</a></li>
+          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Освещение</a></li>
+          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Текстиль</a></li>
         </ul>
         <button class="page-header__site-nav-button" type="button" aria-label="Показать/скрыть меню"></button>
       </nav>
       <nav class="page-header__user-nav">
         <ul class="page-header__user-nav-list">
-          <li class="page-header__user-nav-item"><a href="#"><span class="page-header__user-nav-item-alt">Поиск по сайту</span>></a></li>
-          <li class="page-header__user-nav-item"><a href="#"><span class="page-header__user-nav-item-alt">Корзина</span></a></li>
+          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a" href="#"><span class="page-header__user-nav-item-alt">Поиск по сайту</span>></a></li>
+          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a" href="#"><span class="page-header__user-nav-item-alt">Корзина</span></a></li>
         </ul>
       </nav>
     </header>
@@ -72,10 +71,10 @@
         </div>
         
         <ol class="page-main__product-slider-pagination">
-          <li class="page-main__product-slide-number"><a href="#page-main__product-slide-1">01</a></li>
-          <li class="page-main__product-slide-number"><a href="#page-main__product-slide-2">02</a></li>
-          <li class="page-main__product-slide-number"><a href="#page-main__product-slide-3">03</a></li>
-          <li class="page-main__product-slide-number"><a href="#page-main__product-slide-4">04</a></li>
+          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-1">01</a></li>
+          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-2">02</a></li>
+          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-3">03</a></li>
+          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-4">04</a></li>
         </ol>
 
       </section>
@@ -85,7 +84,7 @@
         <ul class="page-main__new-list">
 
           <li class="page-main__new-item">
-            <a href="#">
+            <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <img class="page-main__new-img" alt="Стул Смеркается">
                 <h3 class="page-main__new-product-name">Стул "Смеркается"</h3>
@@ -95,7 +94,7 @@
           </li>
 
           <li class="page-main__new-item page-main__new-item-second">
-            <a href="#">
+            <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <img class="page-main__new-img" alt="Стол Крем брюле">
                 <h3 class="page-main__new-product-name">Стол "Крем брюле"</h3>
@@ -105,7 +104,7 @@
           </li>
 
           <li class="page-main__new-item">
-            <a href="#">
+            <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <img class="page-main__new-img" alt="Люстра Облако">
                 <h3 class="page-main__new-product-name">Люстра Облако</h3>
@@ -115,7 +114,7 @@
           </li>
 
           <li class="page-main__new-item page-main__new-item-last">
-            <a href="#">
+            <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <img class="page-main__new-img" alt="Стул офисный Белый шоколад">
                 <h3 class="page-main__new-product-name">Стул офисный "Белый шоколад"</h3>
@@ -169,21 +168,22 @@
         </div>
 
         <ol class="page-main__review-slider-pagination">
-          <li class="page-main__review-slide-number"><a href="#page-main__review-slide-1">01</a></li>
-          <li class="page-main__review-slide-number"><a href="#page-main__review-slide-2">02</a></li>
-          <li class="page-main__review-slide-number"><a href="#page-main__review-slide-3">03</a></li>
-          <li class="page-main__review-slide-number"><a href="#page-main__review-slide-4">04</a></li>
+          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-1">01</a></li>
+          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-2">02</a></li>
+          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-3">03</a></li>
+          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-4">04</a></li>
         </ol>
+        <button class = "page-main__review-button-next" aria-label="Следующий слайд"></button>
+        <button class = "page-main__review-button-prev" aria-label="Предыдущий слайд"></button>
 
       </section>
 
-      ///IM HERE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
       <section class="page-main__sale">
         <h3 class="page-main__sale-title">Последний шанс</h3>
         <ul class="page-main__sale-tabs">
-          <li class="page-main__sale-tab page-main__sale-tab_active"><a href="#">Стулья</a></li>
-          <li class="page-main__sale-tab"><a href="#">Диваны</a></li>
-          <li class="page-main__sale-tab"><a href="#">Кресла</a></li>
+          <li class="page-main__sale-tab page-main__sale-tab_active"><a class="page-main__sale-tab-a" href="#">Стулья</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Диваны</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Кресла</a></li>
         </ul>
 
         <ul class="page-main__sale-tabs-contents">
@@ -273,15 +273,15 @@
       </div>
       <nav class="page-footer__nav">
         <ul class="page-footer__nav-list">
-          <li class="page-footer__nav-item"><a href="#"></a>Доставка</li>
-          <li class="page-footer__nav-item"><a href="#"></a>Оплата</li>
-          <li class="page-footer__nav-item"><a href="#"></a>Контакты</li>
-          <li class="page-footer__nav-item"><a href="#"></a>Гарантии</li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Доставка</li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Оплата</li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Контакты</li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Гарантии</li>
         </ul>
       </nav>
       <address class="page-footer__address">
-        <span class="page-footer__tel"><a href="tel:+74952052814"></a>+7(495) 205-28-14</span>
-        <span class="page-footer__mail"><a href="mailto:callium@gmail.com"></a>callium@gmail.com</span>
+        <span class="page-footer__tel"><a class="page-footer__tel-a" href="tel:+74952052814"></a>+7(495) 205-28-14</span>
+        <span class="page-footer__mail"><a class="page-footer__mail-a" href="mailto:callium@gmail.com"></a>callium@gmail.com</span>
       </address>
       <p class="page-footer__copyright">© 2018 «Callium» — Сайт по продаже дизайнерской мебели. Все права защищены.</p>
     </footer>
