added wrapper for slider product info

--- a/index.html
+++ b/index.html
@@ -36,34 +36,42 @@
         
         <div class="page-main__product-slider">
           <article class="page-main__product-slide" id="page-main__product-slide-1">
-            <h2 class="page-main__product-type">Дизайнерская мебель</h2>
-            <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-            <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
-            <button class="page-main__product-button" type="button">Купить</button>
+            <div class="page-main__product-info">
+              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h3 class="page-main__product-name">Кресло "Антиква"</h3>
+              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <button class="page-main__product-button" type="button">Купить</button>
+            </div>
             <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
-            <h2 class="page-main__product-type">Дизайнерская мебель</h2>
-            <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-            <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
-            <button class="page-main__product-button" type="button">Купить</button>
+            <div class="page-main__product-info">
+              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h3 class="page-main__product-name">Кресло "Антиква"</h3>
+              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <button class="page-main__product-button" type="button">Купить</button>
+            </div>
             <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
-            <h2 class="page-main__product-type">Дизайнерская мебель</h2>
-            <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-            <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
-            <button class="page-main__product-button" type="button">Купить</button>
+            <div class="page-main__product-info">
+              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h3 class="page-main__product-name">Кресло "Антиква"</h3>
+              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <button class="page-main__product-button" type="button">Купить</button>
+            </div>
             <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
-            <h2 class="page-main__product-type">Дизайнерская мебель</h2>
-            <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-            <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
-            <button class="page-main__product-button" type="button">Купить</button>
+            <div class="page-main__product-info">
+              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h3 class="page-main__product-name">Кресло "Антиква"</h3>
+              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <button class="page-main__product-button" type="button">Купить</button>
+            </div>
             <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
           </article>
         </div>
