added semantically hidden list title

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="page-main__product-slider">
           <article class="page-main__product-slide" id="page-main__product-slide-1">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -47,7 +47,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -57,7 +57,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -67,7 +67,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -88,8 +88,10 @@
       <section class="page-main__new">
         <h2 class="page-main__new-title">Новинки</h3>
         <ul class="page-main__new-list">
-
-          <li class="page-main__new-item">
+          <li class="page-main__new-item page-main__new-item-title"  >
+            <span class="page-main__new-list-title" aria-hidden="true">Новинки</span>
+          </li>
+          <li class="page-main__new-item page-main__new-item-first" >
             <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <div class="page-main__new-wrap-img">
@@ -113,7 +115,7 @@
             </a>
           </li>
 
-          <li class="page-main__new-item">
+          <li class="page-main__new-item page-main__new-item-third">
             <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <div class="page-main__new-wrap-img">
