--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="page-main__product-slider">
           <article class="page-main__product-slide" id="page-main__product-slide-1">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель1</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -47,7 +47,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель2</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -57,7 +57,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель3</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -67,7 +67,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель4</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -150,7 +150,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова1<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -159,7 +159,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова2<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -168,7 +168,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова3<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -177,20 +177,15 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова4<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
         </div>
 
-        <ol class="page-main__review-slider-pagination">
-          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-1">01</a></li>
-          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-2">02</a></li>
-          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-3">03</a></li>
-          <li class="page-main__review-slide-number"><a class="page-main__review-number-a" href="#page-main__review-slide-4">04</a></li>
-        </ol>
-        <button class = "page-main__review-button-next" aria-label="Следующий слайд"></button>
-        <button class = "page-main__review-button-prev" aria-label="Предыдущий слайд"></button>
+        <div class="page-main__review-button-prev" aria-label="Предыдущий слайд">&lt;</div>
+        <div class="page-main__review-button-next" aria-label="Следующий слайд">&gt;</div>
+        <div class="page-main__review-slider-pagination"></div>
 
       </section>
 
