added text inside footer nav anchors

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         
         <ol class="page-main__product-slider-pagination">
-          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-1">01</a></li>
+          <li class="page-main__product-slide-number"><a class="page-main__product-slide-a page-main__product-a-active" href="#page-main__product-slide-1">01</a></li>
           <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-2">02</a></li>
           <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-3">03</a></li>
           <li class="page-main__product-slide-number"><a class="page-main__product-slide-a" href="#page-main__product-slide-4">04</a></li>
@@ -192,7 +192,7 @@
       <section class="page-main__sale">
         <h3 class="page-main__sale-title">Последний шанс</h3>
         <ul class="page-main__sale-tabs">
-          <li class="page-main__sale-tab page-main__sale-tab_active"><a class="page-main__sale-tab-a" href="#">Стулья</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a page-main__sale-tab_active" href="#">Стулья</a></li>
           <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Диваны</a></li>
           <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Кресла</a></li>
         </ul>
@@ -283,10 +283,10 @@
       <img class="page-footer__logo" src="img/logo.svg" alt="Логотип Callium">
       <nav class="page-footer__nav">
         <ul class="page-footer__nav-list">
-          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Доставка</li>
-          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Оплата</li>
-          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Контакты</li>
-          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#"></a>Гарантии</li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#">Доставка</a></li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#">Оплата</a></li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#">Контакты</a></li>
+          <li class="page-footer__nav-item"><a class="page-footer__nav-item-a" href="#">Гарантии</a></li>
         </ul>
       </nav>
       <address class="page-footer__address">
