added font preload

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" content="Callium — продажа дизайнерской мебели">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="../fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="../fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="../fonts/playfair-display-v22-latin_cyrillic-regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="../fonts/playfair-display-v22-latin_cyrillic-700.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet", href="css/normalize.css">
     <link rel="stylesheet", href="css/style.css">
     <title>Дизайнерская мебель</title>
