gave main slider image transparent background

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </nav>
       <nav class="page-header__user-nav">
         <ul class="page-header__user-nav-list">
-          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a" href="#"><span class="page-header__user-nav-item-alt">Поиск по сайту</span>></a></li>
-          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a" href="#"><span class="page-header__user-nav-item-alt">Корзина</span></a></li>
+          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-search" href="#">Поиск по сайту</a></li>
+          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-cart" href="#">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -46,7 +46,7 @@
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
+            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
@@ -56,7 +56,7 @@
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
+            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
@@ -66,7 +66,7 @@
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
+            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
@@ -76,7 +76,7 @@
               <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.jpg" alt="Кресло Антиква">
+            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
           </article>
         </div>
         
