added wrapper for header

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
 
   <body class="page-body">
     <header class="page-header">
-      <img class="page-header__logo" src="img/logo.svg" alt="Логотип Callium">
-      <nav class="page-header__site-nav page-header__site-nav_closed">
-        <ul class="page-header__site-nav-list">
-          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Мебель</a></li>
-          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Освещение</a></li>
-          <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Текстиль</a></li>
-        </ul>
-        <button class="page-header__site-nav-button" type="button" aria-label="Показать/скрыть меню"></button>
-      </nav>
-      <nav class="page-header__user-nav">
-        <ul class="page-header__user-nav-list">
-          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-search" href="#">Поиск по сайту</a></li>
-          <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-cart" href="#">Корзина</a></li>
-        </ul>
-      </nav>
+      <div class="page-header__wrapper">
+        <img class="page-header__logo" src="img/logo.svg" alt="Логотип Callium">
+        <nav class="page-header__site-nav page-header__site-nav_closed">
+          <ul class="page-header__site-nav-list">
+            <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Мебель</a></li>
+            <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Освещение</a></li>
+            <li class="page-header__site-nav-item"><a class= "page-header__site-nav-a" href="#">Текстиль</a></li>
+          </ul>
+          <button class="page-header__site-nav-button" type="button" aria-label="Показать/скрыть меню"></button>
+        </nav>
+        <nav class="page-header__user-nav">
+          <ul class="page-header__user-nav-list">
+            <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-search" href="#">Поиск по сайту</a></li>
+            <li class="page-header__user-nav-item"><a class="page-header__user-nav-a page-header__user-nav-cart" href="#">Корзина</a></li>
+          </ul>
+        </nav>
+      </div>
+      
     </header>
 
     <main class="page-main">
