--- a/index.html
+++ b/index.html
@@ -43,43 +43,51 @@
         
         <div class="page-main__product-slider">
           <article class="page-main__product-slide" id="page-main__product-slide-1">
-            <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель1</h2>
-              <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
-              <button class="page-main__product-button" type="button">Купить</button>
-            </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+              <div class="page-main__product-info">
+                <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель1</h2>
+                <h3 class="page-main__product-name">Кресло "Антиква"</h3>
+                <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+                <button class="page-main__product-button" type="button">Купить</button>
+              </div>
+              <div class="page-main__product-img-wrapper">
+                <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+              </div>
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
             <div class="page-main__product-info">
               <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель2</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            <div class="page-main__product-img-wrapper">
+              <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            </div>
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
             <div class="page-main__product-info">
               <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель3</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            <div class="page-main__product-img-wrapper">
+              <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            </div>
           </article>
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
             <div class="page-main__product-info">
               <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель4</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
-              <p><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
+              <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
             </div>
-            <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            <div class="page-main__product-img-wrapper">
+              <img class="page-main__product-img" src="img/main-chair-desktop.png" alt="Кресло Антиква">
+            </div>
           </article>
         </div>
         
