added new image for page-main__new-item-second

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="page-main__new-wrap-img">
                   <img class="page-main__new-img" src="img/chair-twilight-desktop.jpg" alt="Стул Смеркается">
                 </div>
-                <h3 class="page-main__new-product-name">Стул "Смеркается"</h3>
+                <h3 class="page-main__new-product-name">Стул «Смеркается»</h3>
                 <p class="page-main__new-product-price">$280</p>
               </article>
             </a>
@@ -122,9 +122,9 @@
             <a class="page-main__new-item-a" href="#">
               <article class="page-main__new-product">
                 <div class="page-main__new-wrap-img">
-                  <img class="page-main__new-img" src="img/table-cream-desktop.jpg" alt="Стол Крем брюле">
+                  <img class="page-main__new-img" src="img/table-cream-desktop.png" alt="Стол Крем брюле">
                 </div>
-                <h3 class="page-main__new-product-name">Стол "Крем брюле"</h3>
+                <h3 class="page-main__new-product-name">Стол «Крем брюле»</h3>
                 <p class="page-main__new-product-price">$320</p>
               </article>
             </a>
@@ -136,7 +136,7 @@
                 <div class="page-main__new-wrap-img">
                   <img class="page-main__new-img" src="img/chandelier-cloud-desktop.jpg" alt="Люстра Облако">
                 </div>
-                <h3 class="page-main__new-product-name">Люстра Облако</h3>
+                <h3 class="page-main__new-product-name">Люстра «Облако»</h3>
                 <p class="page-main__new-product-price">$250</p>
               </article>
             </a>
@@ -148,7 +148,7 @@
                 <div class="page-main__new-wrap-img">
                   <img class="page-main__new-img" src="img/chair-white-desktop.jpg" alt="Стул офисный Белый шоколад">
                 </div>
-                <h3 class="page-main__new-product-name">Стул офисный "Белый шоколад"</h3>
+                <h3 class="page-main__new-product-name">Стул офисный «Белый шоколад»</h3>
                 <p class="page-main__new-product-price">$120</p>
               </article>
             </a>
